<resources>
    <string name="app_name">E-Krushi_SellerApp</string>
    <string name="todo">todo</string>
    <string name="E_krushi">E-Krushi</string>
    <string name="online_shopping_platform_for_farmers">Online Selling Platform for Sellers</string>
    <string name="to_register_to_e_krushi_transport_enter_the_following_details">To register for E-Krushi enter the below details</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="phone">Enter your Phone Number</string>
    <string name="pincode">Enter your pincode</string>
    <string name="shopName">Enter your Shop Name</string>
    <string name="Address">Enter your Address</string>
    <string name="Licence">Enter your Licence Number</string>
    <string name="area_colony_street_village">village</string>
    <string name="landmark_e_g_near_hospital">landmark</string>
    <string name="next">next</string>
    <string name="Register">Register</string>
    <string name="title_activity_add_product">AddProduct</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_shop">My Shop</string>
    <string name="manage_products">Manage Products</string>
    <string name="share_your_shop">Share Your Shop</string>
    <string name="create_offer">Create Offer</string>
    <string name="change_language">Change Language</string>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="next1">Next</string>
    <string name="welcome_to_the_e_krushi">Welcome to the E-krushi</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="a_6_digit_otp_will_sent_to_verify_your_mobile_number">a 6 digit otp will sent to verify your mobile number</string>
    <string name="get_otp">get otp</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="enter_the_otp_you_received">Enter the otp you received</string>
    <string name="enter_otp_here">Enter Otp here</string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="upload_licence">Upload Licence</string>
    <string name="add_your_products">Add Your Products</string>
    <string name="resend_otp_again">Resend OTP again</string>
    <string name="didn_t_receive_otp">Didn\'t receive otp</string>


</resources>