<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LanguageChoose">

    <Button
        android:id="@+id/button1"
        android:layout_width="199dp"
        android:layout_height="49dp"
        android:text="@string/change_language"
        android:textColor="#0E0E0E"
        app:backgroundTint="#FBFFFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="273dp"
        android:layout_height="51dp"
        android:gravity="center_horizontal"
        android:text="@string/choose_your_language"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <Button
        android:id="@+id/button2"
        android:layout_width="124dp"
        android:layout_height="46dp"
        android:text="@string/next1"
        android:textColor="#0E0E0E"
        app:backgroundTint="#FBFFFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

</androidx.constraintlayout.widget.ConstraintLayout>